// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Dialog/DialogHeader Title only: Components/Dialog/DialogHeader Title only 1`] = `
.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
}

.c4.c4 {
  padding: 0;
  width: 40px;
  height: 40px;
  color: #9e9e9e;
  opacity: 1;
  padding: 0;
  background-color: inherit;
  border-radius: 50%;
}

.c4.c4 .icon,
.c4.c4 .icon svg {
  font-size: 20px;
}

.c4.c4:hover {
  background-color: rgba(158,158,158,0.12);
}

.c4.c4:hover .icon {
  color: rgba(158,158,158,0.88);
}

.c4.c4:active .icon {
  color: #9e9e9e;
}

.c4.c4.c4.c4.disabled {
  background-color: inherit;
}

.c4.c4.c4.c4.disabled .icon {
  color: rgba(0,0,0,0.12);
}

.c4.c4 .rippleVisible {
  color: #9e9e9e;
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  white-space: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3.c3 > *:nth-child(n + 2) {
  margin-left: -10px;
}

.c0 {
  background-color: white;
  padding: 20px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1.c1 {
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.c1.c1 h2 {
  color: #212121;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
  font-size: 1.25rem;
  font-weight: 500;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 24px;
}

.c1.c1.vertical h6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 560px;
  margin: 0 auto;
}

.c2 {
  margin: -10px -10px -10px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2.c2 > * {
  margin-left: -10px;
}

.c2.c2 > *:first-child {
  margin-left: 0;
}

<div
  style={
    Object {
      "margin": "10px auto",
      "width": "640px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="MuiDialogTitle-root c1"
    >
      <h2
        className="MuiTypography-root MuiTypography-h6"
      >
        Title
        <div />
      </h2>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
        direction="horizontal"
        onClick={[Function]}
      >
        <button
          aria-label="Close"
          className="MuiButtonBase-root MuiIconButton-root c4"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="  icon c5"
            >
              <svg
                className="c6"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dialog/DialogHeader Title with action icons: Components/Dialog/DialogHeader Title with action icons 1`] = `
.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
}

.c7.c7 {
  padding: 0;
  width: 40px;
  height: 40px;
  color: #9e9e9e;
  opacity: 1;
  padding: 0;
  background-color: inherit;
  border-radius: 50%;
}

.c7.c7 .icon,
.c7.c7 .icon svg {
  font-size: 20px;
}

.c7.c7:hover {
  background-color: rgba(158,158,158,0.12);
}

.c7.c7:hover .icon {
  color: rgba(158,158,158,0.88);
}

.c7.c7:active .icon {
  color: #9e9e9e;
}

.c7.c7.c7.c7.disabled {
  background-color: inherit;
}

.c7.c7.c7.c7.disabled .icon {
  color: rgba(0,0,0,0.12);
}

.c7.c7 .rippleVisible {
  color: #9e9e9e;
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c4.c4 {
  padding: 0;
  width: 40px;
  height: 40px;
  color: #edb63c;
  opacity: 1;
  padding: 0;
  background-color: inherit;
  border-radius: 50%;
}

.c4.c4 .icon,
.c4.c4 .icon svg {
  font-size: 20px;
}

.c4.c4:hover {
  background-color: rgba(237,182,60,0.12);
}

.c4.c4:hover .icon {
  color: rgba(237,182,60,0.88);
}

.c4.c4:active .icon {
  color: #edb63c;
}

.c4.c4.c4.c4.disabled {
  background-color: inherit;
}

.c4.c4.c4.c4.disabled .icon {
  color: rgba(0,0,0,0.12);
}

.c4.c4 .rippleVisible {
  color: #edb63c;
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  white-space: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3.c3 > *:nth-child(n + 2) {
  margin-left: -10px;
}

.c0 {
  background-color: white;
  padding: 20px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1.c1 {
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.c1.c1 h2 {
  color: #212121;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
  font-size: 1.25rem;
  font-weight: 500;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 24px;
}

.c1.c1.vertical h6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 560px;
  margin: 0 auto;
}

.c2 {
  margin: -10px -10px -10px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2.c2 > * {
  margin-left: -10px;
}

.c2.c2 > *:first-child {
  margin-left: 0;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 100%;
}

<div
  style={
    Object {
      "margin": "10px auto",
      "width": "640px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="MuiDialogTitle-root c1"
    >
      <h2
        className="MuiTypography-root MuiTypography-h6"
      >
        Title
        <div />
      </h2>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
        direction="horizontal"
        onClick={[Function]}
      >
        <button
          aria-label="Favorite"
          className="MuiButtonBase-root MuiIconButton-root c4"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="  icon c5"
            >
              <svg
                className="c6"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
        </button>
        <button
          aria-label="Settings"
          className="MuiButtonBase-root MuiIconButton-root c7"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="  icon c5"
            >
              <svg
                className="c6"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
        </button>
        <div>
          <div
            className="c8"
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <button
              aria-label="More"
              className="MuiButtonBase-root MuiIconButton-root c7"
              disabled={false}
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
              variant="round"
            >
              <span
                className="MuiIconButton-label"
              >
                <span
                  className="  icon c5"
                >
                  <svg
                    className="c6"
                    role="img"
                  >
                    <use
                      href="#undefined"
                      xlinkHref="#undefined"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
        <button
          aria-label="Close"
          className="MuiButtonBase-root MuiIconButton-root c7"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="  icon c5"
            >
              <svg
                className="c6"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dialog/DialogHeader Title with avatar and information: Components/Dialog/DialogHeader Title with avatar and information 1`] = `
.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c13 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
}

.c14.c14 {
  padding: 0;
  width: 40px;
  height: 40px;
  color: #9e9e9e;
  opacity: 1;
  padding: 0;
  background-color: inherit;
  border-radius: 50%;
}

.c14.c14 .icon,
.c14.c14 .icon svg {
  font-size: 20px;
}

.c14.c14:hover {
  background-color: rgba(158,158,158,0.12);
}

.c14.c14:hover .icon {
  color: rgba(158,158,158,0.88);
}

.c14.c14:active .icon {
  color: #9e9e9e;
}

.c14.c14.c14.c14.disabled {
  background-color: inherit;
}

.c14.c14.c14.c14.disabled .icon {
  color: rgba(0,0,0,0.12);
}

.c14.c14 .rippleVisible {
  color: #9e9e9e;
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c11.c11 {
  padding: 0;
  width: 40px;
  height: 40px;
  color: #edb63c;
  opacity: 1;
  padding: 0;
  background-color: inherit;
  border-radius: 50%;
}

.c11.c11 .icon,
.c11.c11 .icon svg {
  font-size: 20px;
}

.c11.c11:hover {
  background-color: rgba(237,182,60,0.12);
}

.c11.c11:hover .icon {
  color: rgba(237,182,60,0.88);
}

.c11.c11:active .icon {
  color: #edb63c;
}

.c11.c11.c11.c11.disabled {
  background-color: inherit;
}

.c11.c11.c11.c11.disabled .icon {
  color: rgba(0,0,0,0.12);
}

.c11.c11 .rippleVisible {
  color: #edb63c;
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  white-space: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10.c10 > *:nth-child(n + 2) {
  margin-left: -10px;
}

.c4.c4 {
  width: 32px;
  height: 32px;
  font-size: 1rem;
  font-weight: 500;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 22px;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  background-color: #6FAFEB;
}

.c4.c4:hover {
  opacity: 0.88;
  cursor: pointer;
}

.c4.c4:active {
  opacity: 0.76;
}

.c4:focus {
  outline: none;
}

.c4 > .avatar-short-name {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  background-color: white;
  padding: 20px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8.c8 {
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.c8.c8 h2 {
  color: #212121;
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
  font-size: 1rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 22px;
}

.c8.c8.vertical h6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 560px;
  margin: 0 auto;
}

.c9 {
  margin: -10px -10px -10px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c9.c9 > * {
  margin-left: -10px;
}

.c9.c9 > *:first-child {
  margin-left: 0;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 16px;
  width: 200px;
}

.c2 .c3:hover,
.c2 .c3:active {
  cursor: default;
  opacity: 1;
}

.c6 {
  font-size: 0.875rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 20px;
  color: #212121;
  margin: 0;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c7 {
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  color: #9e9e9e;
  margin: 0;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c5 {
  margin-left: 8px;
  max-width: 160px;
}

@media screen and (max-width:640px) {
  .c1 {
    width: auto;
  }
}

@media screen and (max-width:640px) {
  .c5 {
    display: none;
  }
}

<div
  style={
    Object {
      "margin": "10px auto",
      "width": "640px",
    }
  }
>
  <h4>
    One line: 
  </h4>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="MuiAvatar-root c3 c4 MuiAvatar-colorDefault"
          color="lake"
          size="medium"
        >
          SH
        </div>
      </div>
      <div
        className="c5"
      >
        <h3
          className="c6"
        >
          Jessica Lewis
        </h3>
        <h4
          className="c7"
        >
          1/23/2019 10:02 AM
        </h4>
      </div>
    </div>
    <div
      className="MuiDialogTitle-root c8"
    >
      <h2
        className="MuiTypography-root MuiTypography-h6"
      >
        Bulldog friendship.jpegdddddddddddddddddddd
         
        (1 / 20)
        <div />
      </h2>
    </div>
    <div
      className="c9"
    >
      <div
        className="c10"
        direction="horizontal"
        onClick={[Function]}
      >
        <button
          aria-label="Favorite"
          className="MuiButtonBase-root MuiIconButton-root c11"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="  icon c12"
            >
              <svg
                className="c13"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
        </button>
        <button
          aria-label="Settings"
          className="MuiButtonBase-root MuiIconButton-root c14"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="  icon c12"
            >
              <svg
                className="c13"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
        </button>
        <div>
          <div
            className="c15"
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <button
              aria-label="More"
              className="MuiButtonBase-root MuiIconButton-root c14"
              disabled={false}
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
              variant="round"
            >
              <span
                className="MuiIconButton-label"
              >
                <span
                  className="  icon c12"
                >
                  <svg
                    className="c13"
                    role="img"
                  >
                    <use
                      href="#undefined"
                      xlinkHref="#undefined"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
        <button
          aria-label="Close"
          className="MuiButtonBase-root MuiIconButton-root c14"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="  icon c12"
            >
              <svg
                className="c13"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <br />
  <br />
  <h4>
    Break line: 
  </h4>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="MuiAvatar-root c3 c4 MuiAvatar-colorDefault"
          color="lake"
          size="medium"
        >
          SH
        </div>
      </div>
      <div
        className="c5"
      >
        <h3
          className="c6"
        >
          Jessica Lewis
        </h3>
        <h4
          className="c7"
        >
          1/23/2019 10:02 AM
        </h4>
      </div>
    </div>
    <div
      className="MuiDialogTitle-root c8"
    >
      <h2
        className="MuiTypography-root MuiTypography-h6"
      >
        <span>
          Bulldog friendship.jpegdddddddddddddddddddd
        </span>
        <span>
           
          (1 / 20)
        </span>
        <div />
      </h2>
    </div>
    <div
      className="c9"
    >
      <div
        className="c10"
        direction="horizontal"
        onClick={[Function]}
      >
        <button
          aria-label="Favorite"
          className="MuiButtonBase-root MuiIconButton-root c11"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="  icon c12"
            >
              <svg
                className="c13"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
        </button>
        <button
          aria-label="Settings"
          className="MuiButtonBase-root MuiIconButton-root c14"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="  icon c12"
            >
              <svg
                className="c13"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
        </button>
        <div>
          <div
            className="c15"
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <button
              aria-label="More"
              className="MuiButtonBase-root MuiIconButton-root c14"
              disabled={false}
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
              variant="round"
            >
              <span
                className="MuiIconButton-label"
              >
                <span
                  className="  icon c12"
                >
                  <svg
                    className="c13"
                    role="img"
                  >
                    <use
                      href="#undefined"
                      xlinkHref="#undefined"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
        <button
          aria-label="Close"
          className="MuiButtonBase-root MuiIconButton-root c14"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="  icon c12"
            >
              <svg
                className="c13"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
